CSS fix for overflow on certain screen sizes

--- a/src/app.scss
+++ b/src/app.scss
@@ -86,6 +86,7 @@ h1 {
 }
 
 .main__section {
+	overflow: hidden;
 	width: 100%;
 }
 
